# envparse

./: .clang-format  CMakeLists.txt
include/: CMakeLists.txt
include/envparse/: parse.h++
test/: CMakeLists.txt  test.c++
